--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,10 @@ dmypy.json
 *.pem
 .idea
 
+glove.6B.50d.txt
+glove.6B.100d.txt
+glove.6B.200d.txt
+glove.6B.300d.txt
+
 model/
 #useless comment
